Added new services and contrroller
